# SpaceEnginers_extended_AI

./: .gitignore  .gitmodules  CLAUDE.md  README.md
brain/: CMakeLists.txt
brain/configs/: rules.toml
brain/personas/: fallback.toml  gornicy.md  helion.md  krwawa_reka.md
brain/src/: bridge.cpp  bridge.hpp  config.cpp  config.hpp  db.cpp  db.hpp  engine.cpp  engine.hpp  fallback.cpp  fallback.hpp  llm.cpp  llm.hpp  main.cpp  schema_embed.hpp.in
brain/tests/: CMakeLists.txt  bridge_test.cpp  engine_test.cpp
db/: schema.sql
docs/: protocol.md  testy-reczne.md
mod/Data/: Factions.sbc  RivalAiBehaviors.sbc  SpawnGroups.sbc
mod/Data/Scripts/ZyweFrakcje/: Bridge.cs  CombatEvents.cs  Json.cs  MESApi.cs  RadioDisplay.cs  TestSpawner.cs  ZyweFrakcjeSession.cs
